# 405networkSite

./: .gitignore  CLAUDE.md  README.md  dorksense-ultrathink.html  index.html  indexpage1.html  pricing-embed-code-1.html  pricing-embed-code-2.html  pricing-embed-code-3.html  pricing.html
.claude/: project-plugin-plan.md  project-tasks.md  project.local.md
.claude/commands/: project.md
.github/workflows/: azure-static-web-apps.yml
Inspirations/: dorksense.html  index 2 2.html  index 2 3.html  index 2.html  index2.html  nexus-ai-landing.html
deploy-staging/: index.html
designs/: DESIGN_PREFERENCES.md
designs/design-1-minimal/: index.html
designs/design-2-bold/: index.html
designs/design-3-gradient/: index.html
designs/design-4-dark/: index.html
designs/design-5-corporate/: index.html
designs/version-1-neon-chaos/: index.html
designs/version-10-synthwave-sunset/: index.html
designs/version-11-void-emergence/: index.html
designs/version-13-crystalline-frost/: index.html
designs/version-15-cosmic-nebula/: index.html
designs/version-16-liquid-mercury/: index.html
designs/version-17-holographic-interference/: index.html
designs/version-18-noir-datastream/: index.html
designs/version-19-geometric-voronoi/: index.html
designs/version-2-corporate-brutal/: index.html
designs/version-20-thermal-vision/: index.html
designs/version-21-arctic-minimalism/: index.html
hello-cli/: pyproject.toml
hello-cli/hello_cli/: __init__.py  main.py
hello-cli/tests/: __init__.py  test_greet.py
sites/: index.html
sites/aurora-borealis/: index.html
(+28 files in other folders)
