[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-cli"
version = "0.1.0"
description = "A simple CLI built with Typer"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
hello = "hello_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
